@@ -20,7 +20,8 @@
         avt_is_printable() replaces avt_printable()
         avt_key() replaces avt_get_key()
     - new functions: avt_add_raw_audio_data, avt_pause_audio,
-      avt_get_newline_mode, avt_ticks, avt_show_raw_image
+      avt_get_newline_mode, avt_ticks, avt_show_raw_image,
+      avt_get_background_color, avt_image_max_width, avt_image_max_height
     - avtaddons.h: new functions: avta_load_vorbis_file, avta_load_vorbis_data
     - modified behaviour:
       - avt.navigate: reacts when sound ends
